Fixed spacing on bottom of password reset page, and got rid of spinner for team number entry.

--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,6 @@
 
 root { 
     display: block;
-    margin-left: 5px;
-    margin-right: 5px;
 }
 
 .container {
@@ -28,4 +26,10 @@ root {
 
 .wrapper {
     margin: 5px 5px 5px 5px;
+}
+
+input::-webkit-inner-spin-button,
+input::-webkit-outer-spin-butter {
+    -webkit-appearance: none;
+    margin: 0;
 }
